k8s/overlays/dev/api-business-replicas-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rag-api-business
spec:
  replicas: 1
