k8s/overlays/dev/api-web-replicas-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rag-api-web
spec:
  replicas: 1
